data/derived/sp14/progs/unify/prog3094.ml.out
Characters 47-48:
  else [n[0]];;
        ^
Error: This expression has type int
       This is not a function; it cannot be applied.
